# lapua-pdf-rag-pipeline

./: .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml
configs/: pipeline.yaml  schema_map.yaml  stopwords_fi.txt
eval/: batch_report_25pdf.json  questions_full_90.json  questions_run_20260103_152241.json  questions_run_20260103_152326.json  run_questions_batch.py  run_smoke_eval.py  run_smoke_eval_v2.py  smoke_2024_20q.json  smoke_2024_full.json  smoke_questions_2024.json
scripts/: check_pages.py  create_manifest.py  generate_batch_report.py
src/common/: __init__.py  ids.py  io.py  num_parse.py  schema.py  text_clean.py
src/pipeline/: 00_ingest_docling.py  01_normalize.py  02_extract_schema.py  03_chunk.py  04_index.py  05_eval.py  __init__.py  answer_with_evidence.py  batch_ingest.py  build_complete_index.py  build_unified_index.py  create_table_chunks.py  import_pdfparser.py  query.py  query_complete.py  query_unified.py  rag_answer.py  reranker.py
tests/: __init__.py  test_num_parse.py  test_parser_smoke_2024.py  test_smoke_2024_20q.py
